created models, reddit-list component, and basic service to call reddit api

--- a/SolverInc/src/app/components/main/reddit-list/reddit-list.component.html
+++ b/SolverInc/src/app/components/main/reddit-list/reddit-list.component.html
@@ -1,1 +1,18 @@
-<p>reddit-list works!</p>
+<p-table >
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Vin</th>
+      <th>Year</th>
+      <th>Brand</th>
+      <th>Color</th>
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body">
+    <tr>
+      <td>Hello</td>
+      <td>Hello</td>
+      <td>Hello</td>
+      <td>Hello</td>
+    </tr>
+  </ng-template>
+</p-table>
