--- a/SolverInc/src/app/components/comments/comments.component.html
+++ b/SolverInc/src/app/components/comments/comments.component.html
@@ -1,1 +1,25 @@
-<p>comments works!</p>
+<p-table [value]="comments" [paginator]="true" [rows]="10" >
+  <ng-template pTemplate="header">
+    <tr>
+      <th>Comment</th>
+
+    </tr>
+  </ng-template>
+  <ng-template pTemplate="body" let-comment>
+    <tr>
+      <td>{{comment.body}}</td>
+    </tr>
+  </ng-template>
+
+  <ng-template pTemplate="paginatoreft" let-state>
+    <!--{{state.first}}-->
+    <button type="button"></button>
+  </ng-template>
+  <ng-template pTemplate="paginatorright">
+    <button type="button" ></button>
+  </ng-template>
+
+</p-table>
+<!--<div ngFor="let com of comments">-->
+  <!--<p>{{com.body}}</p>-->
+<!--</div>-->
