--- a/SolverInc/src/app/app.component.html
+++ b/SolverInc/src/app/app.component.html
@@ -1,11 +1,11 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
   <h1>
-    Welcome to {{ title }}!
+    {{ title }}!
   </h1>
-<app-main>
-
-</app-main>
-
+  <!--<app-main></app-main>-->
+  <router-outlet>
+  </router-outlet>
 </div>
-<router-outlet></router-outlet>
+
+
